<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nazivdrugeekipeigra"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="20dp"
        android:elegantTextHeight="true"
        android:gravity="center"
        android:text="@string/tim2"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nazivprveekipeigra"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="68dp"
        android:elegantTextHeight="true"
        android:gravity="center"
        android:text="@string/tim1"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tim1bodovi"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:background="@color/bela"
        android:gravity="center"
        android:text="@string/bodovi"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nazivprveekipeigra" />

    <TextView
        android:id="@+id/tim2bodovi"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="20dp"
        android:background="@color/bela"
        android:gravity="center"
        android:text="@string/bodovi"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nazivdrugeekipeigra" />

    <Button
        android:id="@+id/noviunos"
        android:layout_width="145dp"
        android:layout_height="57dp"
        android:layout_marginBottom="100dp"
        android:background="@color/black"
        android:backgroundTint="@color/black"
        android:text="@string/novaigra"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tim1rezultat"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tim1rezultat"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="152dp"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tim1bodovi" />

    <TextView
        android:id="@+id/tim2rezultat"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="152dp"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tim2bodovi" />

    <Button
        android:id="@+id/obrisibutton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:text="@string/restart"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tim2rezultat"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/ukupnirez"
        android:layout_width="161dp"
        android:layout_height="52dp"
        android:text="@string/ukupnirez"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544" />

    <TextView
        android:id="@+id/partijarez"
        android:layout_width="183dp"
        android:layout_height="72dp"
        android:text="@string/partijarez"
        app:layout_constraintBottom_toTopOf="@+id/ukupnirez"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557" />

</androidx.constraintlayout.widget.ConstraintLayout>